# learnvault

./: .all-contributorsrc  .env.example  .gitignore  .prettierignore  .redocly.yaml  Cargo.toml  DASHBOARD_WIRING_IMPLEMENTATION.md  PR_DESCRIPTION.md  README.md  README_PROGRESS.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  TODO.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  i18next-scanner.config.js  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  smart_contract_issue.md
.github/workflows/: backend-tests.yml  build.yml  contracts-ci.yml  dapp-ipfs.yml  e2e.yml  frontend-ci.yml  preview-comment.yml  security-scan.yml  server-ci.yml
contracts/course_milestone/: Cargo.toml  README.md
contracts/course_milestone/src/: errors.rs  learn_token_client.rs  lib.rs  test.rs
contracts/fungible-allowlist/: README.md
contracts/governance_token/: Cargo.toml  README.md
contracts/learn_token/: Cargo.toml  README.md
contracts/learn_token/src/: lib.rs  test.rs
contracts/milestone_escrow/: Cargo.toml  README.md
contracts/milestone_escrow/fuzz/fuzz_targets/: escrow_operations.rs
contracts/milestone_escrow/src/: lib.rs  test.rs
contracts/scholar_nft/: Cargo.toml  README.md
contracts/scholar_nft/src/: lib.rs  test.rs
contracts/scholar_nft/src/tests/: mint_on_completion.rs  mod.rs
contracts/scholarship_treasury/: Cargo.toml  README.md
contracts/scholarship_treasury/src/: lib.rs  test.rs
contracts/scholarship_treasury/src/tests/: mod.rs  upgrade_migration.rs
contracts/shared/: Cargo.toml  README.md
contracts/shared/src/: lib.rs  upgrade.rs
contracts/upgrade_timelock_vault/: README.md
docs/: FAQ.md  SECURITY_REVIEW.md  TODO-nft-images.md  contract-events.md  contract-upgrades.md  contracts.md  cors-configuration.md  credentials-api-example.md  glossary.md  lighthouse-ci.md  lighthouse-mobile.html  mobile-responsive-audit.md  nft-metadata-standard.md  openapi-validation.md  openapi.yaml  performance-budget.md  performance-http2-compression.md  security-improvements.md  token-economics.md  zk-credential-proof-prototype.md
docs/adr/: ADR-009-token-economics.md  ADR-010-oracle-milestone-verification.md  ADR-010-zk-credential-verification.md
docs/api/: error-codes.md  provider-integration.md
docs/architecture/: component-backend.md  container-diagram.md  system-context.md
docs/contracts/: addresses.md
docs/contributing/: code-review.md  git-workflow.md
docs/database/: schema.md
docs/deployment/: runbook.md
docs/guides/: scholarship-tranche-flow.md
docs/operations/: disaster-recovery.md
docs/security/: admin-key-management.md  audit-scope.md  automated-scan-results.md  third-party-audit-checklist.md
docs/user-guides/: donor.md  scholar.md
e2e/: credential-nft.spec.ts  critical-flows.spec.ts  enrollment-to-milestone.spec.ts  governance-voting.spec.ts  leaderboard.spec.ts  mobile-nav.spec.ts  responsive-layout.spec.ts
e2e/fixtures/: mock-dao-api.ts  mock-horizon.ts  mock-wallet.ts
lib/: uploadSecurity.ts
scripts/: convert-nft-svg-to-png.cjs  deploy-testnet.sh  generate-pseudo-locale.mjs  smoke-test-contracts.sh  start-dev.mjs
scripts/oracle/: verify-github-evidence.mjs
server/: .env.example  docker-compose.test.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json
server/scripts/: generate-openapi.ts  migrate.ts  upload-nft-images.ts
server/src/: index.ts  openapi.ts  types.d.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx  test-utils.tsx  theme-init.ts  vite-env.d.ts
src/__tests__/: Donor.test.tsx
src/components/: ActivityFeed.tsx  AddressDisplay.tsx  BookmarkButton.tsx  ComingSoon.module.css  ComingSoon.tsx  CommentCard.tsx  CommentSection.test.tsx  CommentSection.tsx  ConnectWalletGuard.test.tsx  ConnectWalletGuard.tsx  CourseCard.tsx  CourseCategoryBadge.test.tsx  CourseCategoryBadge.tsx  CourseProgressBar.tsx  CourseReviewsPanel.tsx  DeferredSection.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FAQSection.test.tsx  FAQSection.tsx  FlagDialog.tsx  FollowButton.tsx  Footer.test.tsx  Footer.tsx  GlobalSearch.tsx  GuessTheNumber.tsx  IpfsUpload.tsx  LRNBalanceWidget.tsx  LRNHistoryChart.tsx  LessonContent.tsx  LessonSidebar.tsx  MentorshipPanel.tsx  NavBar.tsx  (+21 more)
tests/: upgrade.rs
(+378 files in other folders)
