[package]
name = "course_milestone"
description = "The CourseMilestone contract tracks each learner's progress and on-chain milestone submissions."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true

[lib]
# `rlib` is added alongside `cdylib` so the contract can be linked into other
# crates' integration tests (e.g. scholar_nft's mint-on-completion flow).
# `cdylib` is still produced for the on-chain wasm build.
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
learnvault-shared = { workspace = true }
soroban-sdk = { workspace = true }
stellar-registry = "0.0.4"

[dev-dependencies]
learnvault-shared = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
