[package]
name = "learn-token"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
learnvault-shared = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
learnvault-shared = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = { workspace = true }
