[package]
name = "scholar-nft"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
learnvault-shared = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
learnvault-shared = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real CourseMilestone contract, deployed alongside ScholarNFT in the
# mint-on-completion integration test (contracts/scholar_nft/src/tests/).
course_milestone = { path = "../course_milestone" }
