[package]
name = "scholarship-treasury"
description = "Treasury contract for scholarship funding in USDC"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
learnvault-shared = { workspace = true }
soroban-sdk = { workspace = true }
stellar-registry = "0.0.4"

[dev-dependencies]
learnvault-shared = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = { workspace = true }
governance-token = { path = "../governance_token" }
